# fountain-reader

./: .gitignore  Makefile  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: adapter.ts  charts.ts  main.ts  statistics.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
webview/: stats.html
