[package]
name = "fountain-reader"
version = "0.1.0"
description = "Fountain Reader - A standalone Fountain screenplay reader"
authors = ["Arming"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "fountain_reader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-window-state = "2"
tauri-plugin-cli = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
betterfountain_rust = { git = "https://github.com/ArmingLou/betterfountain-rust.git" }
notify = "6"
tokio = { version = "1", features = ["full"] }
printpdf = "0.7"
base64 = "0.22"
url = "2"

